# email-triage-rl

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline.py  inference.py  pyproject.toml
email_triage_rl_hackathon/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
email_triage_rl_hackathon/server/: app.py  email_data.py  graders.py  my_environment.py  requirements.txt
server/: app.py
tests/: test_environment.py
