[project]
name = "hackathon-sst"
version = "0.1.0"
description = "Meta x PyTorch OpenEnv Scaler Hackathon workspace"
requires-python = ">=3.10"

dependencies = [
    "openenv-core",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "httpx",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
