[project]
name = "hackathon-sst"
version = "0.1.0"
description = "Meta x PyTorch OpenEnv Scaler Hackathon workspace"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "httpx",
    "pytest",
]

[project.scripts]
server = "email_triage_rl_hackathon.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_triage_rl_hackathon"]
